--- a/.github/workflows/main_venue-guard-backend.yml
+++ b/.github/workflows/main_venue-guard-backend.yml
@@ -18,22 +18,25 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js version
-        uses: actions/setup-node@v3
-        with:
-          node-version: '22.x'
 
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
 
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: node-app
-          path: .
+        - name: Set up Node.js version
+          uses: actions/setup-node@v3
+          with:
+            node-version: '22.x'
+
+        - name: npm install, build, and test (backend)
+          working-directory: backend
+          run: |
+            npm install
+            npm run build --if-present
+            npm run test --if-present
+
+        - name: Upload artifact for deployment job
+          uses: actions/upload-artifact@v4
+          with:
+            name: node-app
+            path: backend
 
   deploy:
     runs-on: ubuntu-latest
@@ -61,5 +64,5 @@ jobs:
         with:
           app-name: 'venue-guard-backend'
           slot-name: 'Production'
-          package: .
+          package: backend
           
